--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,8 @@ target 'Restaurant' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   target 'RestaurantTests' do
     inherit! :search_paths
     # Pods for testing
